[package]
name = "wargames-oracle"
version = "0.1.0"
description = "WARGAMES on-chain risk oracle for Solana agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wargames_oracle"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
